# bulltui

./: .dockerignore  .gitignore  .mise.toml  Cargo.toml  Dockerfile  LICENSE  README.md  demo.tape  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml  version.yml
.tangled/workflows/: check.yaml  mirror.yaml  test.yaml
assets/: .gitkeep
crates/bullmq/: Cargo.toml
crates/bullmq/src/: client.rs  error.rs  events.rs  keys.rs  lib.rs  types.rs  write.rs
crates/bullmq/tests/: e2e_reads.rs  e2e_tls.rs  e2e_writes.rs
crates/bullmq/tests/common/: mod.rs  redis-test.crt  redis-test.key
crates/bulltui/: Cargo.toml
crates/bulltui/src/: app.rs  boot.rs  cli.rs  clipboard.rs  events.rs  format.rs  fuzzy.rs  fx.rs  keymap.rs  lib.rs  main.rs  splash_bulltui.txt  state.rs  theme.rs
crates/bulltui/src/ui/: events.rs  job.rs  mod.rs  overlay.rs  overview.rs  queue.rs  schedulers.rs  workers.rs
crates/bulltui/tests/: tui_e2e.rs
e2e/seeder/: e2e.mjs  package-lock.json  package.json  seed.mjs
npm/bulltui/: CHANGELOG.md  package.json  run.js
npm/bulltui-darwin-arm64/: package.json
npm/bulltui-darwin-x64/: package.json
npm/bulltui-linux-arm64/: package.json
npm/bulltui-linux-x64/: package.json
