[workspace]
resolver = "2"
members = ["crates/bullmq", "crates/bulltui"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://tangled.sh/@vinnymac.dev/bulltui"
homepage = "https://tangled.sh/@vinnymac.dev/bulltui"
readme = "README.md"
keywords = ["bullmq", "redis", "queue", "tui", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Vincent Taverna <vinnymac@gmail.com>"]

[workspace.dependencies]
bullmq = { path = "crates/bullmq" }

# async runtime + redis
#
# TLS (`rediss://`) rides on rustls, so there's no OpenSSL/system dependency and
# the binary stays portable to scratch/distroless. `tls-rustls-webpki-roots`
# compiles Mozilla's CA bundle into the binary (managed brokers — ElastiCache,
# Upstash, Redis Cloud, Azure — chain to public CAs), and `tls-rustls-insecure`
# backs the `--insecure` flag for self-signed / private-CA brokers.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "connection-manager", "script", "streams", "tokio-rustls-comp", "tls-rustls-webpki-roots", "tls-rustls-insecure"] }
futures-util = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# errors
thiserror = "1"
anyhow = "1"

# misc
tracing = "0.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
