[package]
name = "bulltui"
description = "A terminal UI for BullMQ — feature parity with bull-board."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "bulltui"

[[bin]]
name = "bulltui"
path = "src/main.rs"

[dependencies]
bullmq = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
ratatui = "0.30.2"
tachyonfx = { version = "0.25", features = ["sendable"] }
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = "0.4"
arboard = { version = "3", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
testcontainers = "0.23"
